unpackaged/main/default/objects/Moment__c/Moment__c.object-meta.xml
<CustomObject>
    <label>Moment</label>
    <nameField>
        <displayFormat>M{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>Moment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Moments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>