unpackaged/main/default/objects/Moment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Account related to the Moment.

In System Use: Account_Owner_Formula; Account Owner MisMatch formula; Case - Handoff Button; Contact - After Save Automations; Koala Intent Signal - After Save Automations; Moment: Before Save Automations; Retool User - After Save Automations; Task - After Save Automations 

External Systems Utilization: Koala</description>
    <inlineHelpText>The Account related to the Moment.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Moments</relationshipLabel>
    <relationshipName>Moments</relationshipName>
    <type>Lookup</type>
</CustomField>