unpackaged/main/default/objects/Moment__c/fields/Account_Owner_Formula__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Formula__c</fullName>
    <description>Displays the owner name of the Account related to the Moment.

In System Use: Reports

External Systems Utilization: None</description>
    <formula>Account__r.Owner.FirstName &amp;&quot; &quot;&amp; Account__r.Owner.LastName</formula>
    <inlineHelpText>Formula that displays the owner name of the Account related to the Moment.</inlineHelpText>
    <label>Account Owner (Formula)</label>
    <type>Text</type>
</CustomField>