unpackaged/main/default/objects/Moment__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Campaign related to the Moment.

In System Use: &#39;Autolaunch: Check MQL&#39;; &#39;Campaign Member: After Save Automations&#39;; &#39;Moment: Before Save Automations&#39;

External Systems Utilization: None</description>
    <inlineHelpText>The Campaign related to the Moment.</inlineHelpText>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Moments</relationshipLabel>
    <relationshipName>Moments</relationshipName>
    <type>Lookup</type>
</CustomField>