unpackaged/main/default/objects/Moment__c/fields/Campaign_Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_ID__c</fullName>
    <description>Stores the unique Salesforce Id of the Campaign Member.

In System Use: &#39;Campaign Member: After Save Automations&#39;

External Systems Utilization: None</description>
    <inlineHelpText>Stores the unique Salesforce Id of the Campaign Member.</inlineHelpText>
    <label>Campaign Member ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>