unpackaged/main/default/objects/Moment__c/fields/Campaign_Member_Status_at_Moment__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Status_at_Moment__c</fullName>
    <description>The status of the Campaign Member at the time the Moment was created.

In System Use: &#39;Campaign Member: After Save Automations&#39;

External Systems Utilization: None</description>
    <inlineHelpText>The status of the Campaign Member at the time the Moment was created.</inlineHelpText>
    <label>Campaign Member Status at Moment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>