unpackaged/main/default/objects/Moment__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Case related to the Moment.

In System Use: &#39;Case - Handoff Button&#39;

External Systems Utilization: None</description>
    <inlineHelpText>The Case related to the Moment.</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Moments</relationshipLabel>
    <relationshipName>Moments</relationshipName>
    <type>Lookup</type>
</CustomField>