unpackaged/main/default/objects/Moment__c/fields/Contact_Account_Mismatch__c.field-meta.xml
<CustomField>
    <fullName>Contact_Account_Mismatch__c</fullName>
    <description>Formula that checks true if the Contact’s associated Account is different from the one specified in the related Account.

In System Use: Reports

External Systems Utilization: None</description>
    <formula>NOT(   Contact__r.AccountId =  Account__c ) &amp;&amp; NOT(ISBLANK(Contact__c))</formula>
    <inlineHelpText>Formula that checks true if the Contact’s associated Account is different from the one specified in the related Account.</inlineHelpText>
    <label>Contact Account Mismatch</label>
    <type>Checkbox</type>
</CustomField>