unpackaged/main/default/objects/Moment__c/fields/Context_Processed__c.field-meta.xml
<CustomField>
    <fullName>Context_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in flows to confirm that Hubspot form data is collated.

In System Use: &#39;Campaign Member: After Save Automations&#39;, &#39;Moment: Before Save Automations&#39;

External Systems Utilization: Hubspot</description>
    <label>Context Processed</label>
    <type>Checkbox</type>
</CustomField>