unpackaged/main/default/objects/Moment__c/fields/Created_From_Detail__c.field-meta.xml
<CustomField>
    <fullName>Created_From_Detail__c</fullName>
    <description>References the event from which the Moment was created. This is typically an automatically inserted value listing the flow that created the Moment.

In System Use: Campaign Member: After Save Automations; &#39;Case - Handoff Button&#39;; &#39;Contact - After Save Automations&#39;; &#39;Koala Intent Signal - After Save Automations&#39;; &#39;Retool User - After Save Automations&#39;; &#39;Task - After Save Automations&#39;	

External Systems Utilization: Koala</description>
    <inlineHelpText>References the event from which the Moment was created. This is typically an automatically inserted value listing the flow that created the Moment.</inlineHelpText>
    <label>Created From Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>