unpackaged/main/default/objects/Moment__c/fields/Email_Formula__c.field-meta.xml
<CustomField>
    <fullName>Email_Formula__c</fullName>
    <description>Formula that displays the Retool User, Contact or Lead associated to the Moment.

In System Use: Autolaunch: Check MQL

External Systems Utilization: None</description>
    <formula>BLANKVALUE(  Retool_User__r.Email__c , BLANKVALUE( Contact__r.Email ,  Lead__r.Email ))</formula>
    <inlineHelpText>Formula that displays the Retool User, Contact or Lead associated to the Moment.</inlineHelpText>
    <label>Email (Formula)</label>
    <type>Text</type>
</CustomField>