unpackaged/main/default/objects/Moment__c/fields/Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Score__c</fullName>
    <description>Moment score assigned from CMDT criteria.

External System Utilization: Polytomic</description>
    <inlineHelpText>Score of the engagement within a defined time-frame.</inlineHelpText>
    <label>Engagement Score</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>