unpackaged/main/default/objects/Moment__c/fields/Engagement_Score_Details__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Score_Details__c</fullName>
    <description>CMDT: Category, Factor, Version, Score

External Systems Use: Polytomic</description>
    <inlineHelpText>Criteria details for the Engagement Score.</inlineHelpText>
    <label>Engagement Score Details</label>
    <length>254</length>
    <type>Text</type>
</CustomField>