unpackaged/main/default/objects/Moment__c/fields/Event_Notes__c.field-meta.xml
<CustomField>
    <fullName>Event_Notes__c</fullName>
    <description>Stores notes from the related campaign member.

In System Use: &#39;Moment: Before Save Automations&#39;

External Systems Utilization: None</description>
    <inlineHelpText>Stores notes from the related campaign member.</inlineHelpText>
    <label>Event Notes</label>
    <type>TextArea</type>
</CustomField>