unpackaged/main/default/objects/Moment__c/fields/First_Touch_Channel__c.field-meta.xml
<CustomField>
    <fullName>First_Touch_Channel__c</fullName>
    <description>The channel of the First Touch related to this moment, from the digital data attribution model

In System Use: None

External Systems Utilization: Polytomic</description>
    <label>First Touch Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>