unpackaged/main/default/objects/Moment__c/fields/Implied_Subteam_Formula__c.field-meta.xml
<CustomField>
    <fullName>Implied_Subteam_Formula__c</fullName>
    <description>Formula that displays the Implied Subteam from the related Contact or Lead.

In System Use: Reports

External Systems Utilization: None</description>
    <formula>BLANKVALUE( Contact__r.Contact_Implied_Subteam__c , Lead__r.Lead_Implied_Segment__c )</formula>
    <inlineHelpText>Formula that displays the Implied Subteam from the related Contact or Lead.</inlineHelpText>
    <label>Implied Subteam (Formula)</label>
    <type>Text</type>
</CustomField>