unpackaged/main/default/objects/Moment__c/fields/Is_MQL__c.field-meta.xml
<CustomField>
    <fullName>Is_MQL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Moment is eligible as an MQL.

In System Use: &#39;Moment.MQL_Status&#39;; &#39;Journey,.Journey_Subtype&#39;; &#39;Journey.Is_MQL&#39;; Autolaunch: Check MQL&#39;; &#39;Moment: After Save Automations&#39;

External Systems Utilization: None</description>
    <inlineHelpText>Indicates if the Moment is eligible as an MQL.</inlineHelpText>
    <label>Is MQL</label>
    <type>Checkbox</type>
</CustomField>