unpackaged/main/default/objects/Moment__c/fields/Journey__c.field-meta.xml
<CustomField>
    <fullName>Journey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Journey related to the Moment.

In System Use: &#39;Autolaunch: Check MQL&#39;; &#39;Moment: After Save Automations&#39;

External Systems Utilization: None</description>
    <label>Journey</label>
    <referenceTo>Journey__c</referenceTo>
    <relationshipLabel>Moments</relationshipLabel>
    <relationshipName>Moments</relationshipName>
    <type>Lookup</type>
</CustomField>