unpackaged/main/default/objects/Moment__c/fields/Journey_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Journey_Relationship__c</fullName>
    <description>Indicates if the Journey is created, joined, or resting

In System Use: &#39;Autolaunch: Check MQL&#39;; &#39;Moment: After Save Automations&#39;

External Systems Utilization: None</description>
    <label>Journey Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Joined</fullName>
            </value>
            <value>
                <fullName>Resting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>