unpackaged/main/default/objects/Moment__c/fields/Last_Touch_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Touch_At__c</fullName>
    <description>The timestamp of the Last Touch related to this moment, from the digital data attribution model

In System Use: None

External Systems Utilization: Polytomic</description>
    <label>Last Touch At</label>
    <type>DateTime</type>
</CustomField>