unpackaged/main/default/objects/Moment__c/fields/Last_Touch_Channel_Group__c.field-meta.xml
<CustomField>
    <fullName>Last_Touch_Channel_Group__c</fullName>
    <description>The channel group of the Last Touch related to this moment, from the digital data attribution model

In System Use: None

External Systems Utilization: Polytomic</description>
    <label>Last Touch Channel Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>