unpackaged/main/default/objects/Moment__c/fields/Meeting_Page_Source__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Page_Source__c</fullName>
    <description>Source of the Moment, for example: Campaign, Champify Alert, Hubspot Form, Koala, Madkudu
Regie.ai, Retool User, or Support Handoff

In System Use: Moment: Before Save Automations

External Systems Utilization: None</description>
    <label>Meeting Page Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>