unpackaged/main/default/objects/Moment__c/fields/MK_Product_Score__c.field-meta.xml
<CustomField>
    <fullName>MK_Product_Score__c</fullName>
    <description>The Madkudu product score.

In System Use: Reports

External Systems Utilization: Madkudu</description>
    <inlineHelpText>The Madkudu product score.</inlineHelpText>
    <label>MK Product Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>