unpackaged/main/default/objects/Moment__c/fields/MK_Product_Score_Level__c.field-meta.xml
<CustomField>
    <fullName>MK_Product_Score_Level__c</fullName>
    <formula>IF(
    ISBLANK(MK_Product_Score__c),
    NULL,
    IF(
        MK_Product_Score__c &lt;= 49, &quot;Low&quot;,
        IF(
            MK_Product_Score__c &lt;= 69, &quot;Medium&quot;,
            IF(
                MK_Product_Score__c &lt;= 84, &quot;High&quot;,
                IF(
                    MK_Product_Score__c &lt;= 100, &quot;Very High&quot;,
                    &quot;Unknown&quot;
                )
            )
        )))</formula>
    <label>MK Product Score Level</label>
    <type>Text</type>
</CustomField>