unpackaged/main/default/objects/Moment__c/fields/Moment_Context__c.field-meta.xml
<CustomField>
    <fullName>Moment_Context__c</fullName>
    <description>Stores the information related to the Moment creation source.

In System Use: &#39;Case - Handoff Button&#39;; &#39;Contact - After Save Automations&#39;; &#39;Koala Intent Signal - After Save Automations&#39;; &#39;Moment: After Save Automations&#39;; &#39;Moment: Before Save Automations&#39;; &#39;Retool User - After Save Automations&#39;; &#39;Task - After Save Automations&#39;

External Systems Utilization: Champify; Hubspot; Koala; Madkudu; Regie.ai</description>
    <inlineHelpText>Stores the information related to the Moment creation source.</inlineHelpText>
    <label>Moment Context</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>