unpackaged/main/default/objects/Moment__c/fields/Moment_Date__c.field-meta.xml
<CustomField>
    <fullName>Moment_Date__c</fullName>
    <description>Formula that displays the date when the Moment occurred.

In System Use: Moment_Week; Moment_Month; Moment_Quarter; Moment_Half

External Systems Utilization: None</description>
    <formula>DATEVALUE( Moment_Occurred_At__c )</formula>
    <inlineHelpText>Formula that displays the date when the Moment occurred.</inlineHelpText>
    <label>Moment Date</label>
    <type>Date</type>
</CustomField>