unpackaged/main/default/objects/Moment__c/fields/Moment_Description__c.field-meta.xml
<CustomField>
    <fullName>Moment_Description__c</fullName>
    <description>Stores the results of the MQL eligibility check.

In Systems Use: Moment_Description;  &#39;Case - Handoff Button&#39;; &#39;Contact - After Save Automations&#39;; &#39;Koala Intent Signal - After Save Automations&#39;; &#39;Moment: After Save Automations&#39;; &#39;Moment: Before Save Automations&#39;; &#39;Retool User - After Save Automations&#39;; &#39;Task - After Save Automations&#39;

External Systems Utilization: Koala</description>
    <label>Moment Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>