unpackaged/main/default/objects/Moment__c/fields/Moment_ID_case_safe__c.field-meta.xml
<CustomField>
    <fullName>Moment_ID_case_safe__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <label>Moment ID (case safe)</label>
    <type>Text</type>
</CustomField>