unpackaged/main/default/objects/Moment__c/fields/Moment_Month__c.field-meta.xml
<CustomField>
    <fullName>Moment_Month__c</fullName>
    <description>Formula that displays the month, the first day of the month and the year of the Moment.

In System Use: Reports

External Systems Utilization: None</description>
    <formula>DATE(YEAR(Moment_Date__c),MONTH(Moment_Date__c),1)</formula>
    <inlineHelpText>Formula that displays the month, the first day of the month and the year of the Moment.</inlineHelpText>
    <label>Moment Month</label>
    <type>Date</type>
</CustomField>