unpackaged/main/default/objects/Moment__c/fields/Moment_Priority__c.field-meta.xml
<CustomField>
    <fullName>Moment_Priority__c</fullName>
    <description>Formula to assist in the scoring for Orphan Organizations for review to determine prioritization. Used for reporting only.

In System Use: Reports

External Systems Utilization: None</description>
    <formula>IF (
    Retool_User__r.Retool_Org__r.Stripe_Annualized_Revenue__c &gt; 0,
    &#39;1 - Paid Account&#39;,
    IF (
        NOT(ISBLANK(Retool_User__r.Retool_Org__r.Subscription_Type__c)),
        &#39;2 - Subscription&#39;,
        IF (
            NOT(ISBLANK(Retool_User__r.Retool_Org__r.Business_Unit__c)),
            &#39;3 - Business Unit&#39;,
            IF (
                DATEVALUE(CreatedDate) &gt;= (TODAY() - 90),
                &#39;4 - Recently Created&#39;,
                IF (
                    NOT(ISBLANK(Retool_User__c)),
                    &#39;5 - Retool User&#39;,
                    &#39;6 - Other&#39;
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula to assist in the review scoring for Orphan Organizations</inlineHelpText>
    <label>Moment Priority</label>
    <type>Text</type>
</CustomField>