unpackaged/main/default/objects/Moment__c/fields/Moment_Type__c.field-meta.xml
<CustomField>
    <fullName>Moment_Type__c</fullName>
    <description>Indicates the source of the Moment.

In System Use: &#39;Autolaunch: Check MQL&#39;, &#39;Case - Handoff Button&#39;, &#39;Contact - After Save Automations&#39;, &#39;Campaign Member: After Save Automations&#39;, &#39;Moment: After Save Automations&#39;,  &#39;Retool User - After Save Automations&#39;, &#39;Task - After Save Automations&#39;

External Systems Utilization: None</description>
    <inlineHelpText>Indicates the source of the Moment.</inlineHelpText>
    <label>Moment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Champify Alert</fullName>
            </value>
            <value>
                <fullName>Content Download</fullName>
            </value>
            <value>
                <fullName>Demo Request</fullName>
            </value>
            <value>
                <fullName>Form Submission</fullName>
            </value>
            <value>
                <fullName>Koala Intent Signal</fullName>
            </value>
            <value>
                <fullName>Live Event - Hackathon</fullName>
            </value>
            <value>
                <fullName>Live Event - Retool Hosted</fullName>
            </value>
            <value>
                <fullName>Live Event - Tradeshow</fullName>
            </value>
            <value>
                <fullName>Live Event - Other</fullName>
            </value>
            <value>
                <fullName>Product Action</fullName>
            </value>
            <value>
                <fullName>Product Signup</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Webinar - Live</fullName>
            </value>
            <value>
                <fullName>Webinar - Recorded</fullName>
            </value>
            <value>
                <fullName>Regie.ai - Started</fullName>
            </value>
            <value>
                <fullName>Regie.ai - Conversion</fullName>
            </value>
            <value>
                <fullName>Regie.ai - Expansion</fullName>
            </value>
            <value>
                <fullName>Partner Referral</fullName>
            </value>
            <value>
                <fullName>Campaign Other</fullName>
                <isActive>false</isActive>
                <label>Campaign Other</label>
            </value>
            <value>
                <fullName>Endgame Alert</fullName>
                <isActive>false</isActive>
                <label>Endgame Alert</label>
            </value>
            <value>
                <fullName>Event - Digital</fullName>
                <isActive>false</isActive>
                <label>Event - Digital</label>
            </value>
            <value>
                <fullName>Event - Physical</fullName>
                <isActive>false</isActive>
                <label>Event - Physical</label>
            </value>
            <value>
                <fullName>Gated Content</fullName>
                <isActive>false</isActive>
                <label>Gated Content</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>