unpackaged/main/default/objects/Moment__c/fields/Moment_Type_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Moment_Type_Reporting__c</fullName>
    <description>Formula used for reporting to categorize Moment type.

In System Use: &#39;Moment: After Save Automations&#39;

External Systems Utilization: None</description>
    <formula>CASE(  Moment_Type__c ,
&quot;Demo Request&quot;, &quot;Demo Request&quot;,
&quot;Content Download&quot;, &quot;Content&quot;,
&quot;Form Submission&quot;, &quot;Content&quot;,
&quot;Live Event - Retool Hosted&quot;, &quot;Marketing Event&quot;,
&quot;Live Event - Tradeshow&quot;, &quot;Marketing Event&quot;,
&quot;Live Event - Hackathon&quot;, &quot;Marketing Event&quot;,
&quot;Live Event - Other&quot;, &quot;Marketing Event&quot;,
&quot;Product Signup&quot;, &quot;Product&quot;,
&quot;Webinar - Live&quot;, &quot;Marketing Event&quot;,
&quot;Webinar - Recorded&quot;, &quot;Marketing Event&quot;,
&quot;Partner Referral&quot;,&quot;Partner Referral&quot;,
&quot;Other&quot;)</formula>
    <inlineHelpText>Formula used for reporting to categorize Moment type.</inlineHelpText>
    <label>Moment Type (Reporting)</label>
    <type>Text</type>
</CustomField>