unpackaged/main/default/objects/Moment__c/fields/Moment_Week__c.field-meta.xml
<CustomField>
    <fullName>Moment_Week__c</fullName>
    <description>Formula that displays the most recent Sunday before or on the Moment Date.

In System Use: Reports

External Systems Utilization: None</description>
    <formula>CASE(MOD( Moment_Date__c - DATE(1900, 1, 6), 7),
0, Moment_Date__c  + 0,
1, Moment_Date__c  + 6,
2, Moment_Date__c  + 5,
3, Moment_Date__c  + 4,
4, Moment_Date__c  + 3,
5, Moment_Date__c  + 2,
6, Moment_Date__c  + 1,
NULL)</formula>
    <inlineHelpText>Formula that displays the most recent Sunday before or on the Moment Date.</inlineHelpText>
    <label>Moment Week</label>
    <type>Date</type>
</CustomField>