unpackaged/main/default/objects/Moment__c/fields/MQL_Check_Results__c.field-meta.xml
<CustomField>
    <fullName>MQL_Check_Results__c</fullName>
    <description>Stores the results of the MQL eligibility check.

In Systems Use: &#39;Autolaunch: Check MQL&#39;; &#39;Moment: After Save Automations&#39;

External Systems Utilization: None</description>
    <inlineHelpText>Stores the results of the MQL eligibility check.</inlineHelpText>
    <label>MQL Check Results</label>
    <type>TextArea</type>
</CustomField>