unpackaged/main/default/objects/Moment__c/fields/Name_at_Moment__c.field-meta.xml
<CustomField>
    <fullName>Name_at_Moment__c</fullName>
    <description>The name of the Contact or Lead at the time the Moment was created.

In System Use: &#39;Moment: Before Save Automations&#39;

External Systems Utilization: None</description>
    <inlineHelpText>The name of the Contact or Lead at the time the Moment was created.</inlineHelpText>
    <label>Name at Moment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>