unpackaged/main/default/objects/Moment__c/fields/Partner_Lead__c.field-meta.xml
<CustomField>
    <fullName>Partner_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Lead</label>
    <referenceTo>Partner_Lead__c</referenceTo>
    <relationshipLabel>Moments</relationshipLabel>
    <relationshipName>Moments</relationshipName>
    <type>Lookup</type>
</CustomField>