unpackaged/main/default/objects/Moment__c/fields/PS_Closed__c.field-meta.xml
<CustomField>
    <fullName>PS_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Professional Services

In System Use: Reports

External Systems Utilization: None</description>
    <inlineHelpText>Used by Professional Services</inlineHelpText>
    <label>PS Closed</label>
    <type>Checkbox</type>
</CustomField>