unpackaged/main/default/objects/Moment__c/fields/rcid__c.field-meta.xml
<CustomField>
    <fullName>rcid__c</fullName>
    <description>Retool Campaign ID. Intended to be a hidden field used on our Demo Form, which is populated by our website. The Retool Campaign ID is tied to SFDC Campaigns.

In Systems Use: &#39;Moment: Before Save Automations&#39;; &#39;Task - After Save Automations&#39;


External Systems Utilization: Hubspot</description>
    <inlineHelpText>Retool Campaign ID. Intended to be a hidden field used on our Demo Form, which is populated by our website. The Retool Campaign ID is tied to SFDC Campaigns.</inlineHelpText>
    <label>rcid</label>
    <length>18</length>
    <type>Text</type>
</CustomField>