unpackaged/main/default/objects/Moment__c/fields/Retool_User__c.field-meta.xml
<CustomField>
    <fullName>Retool_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Retool User related to the Moment.

In Systems Use: Email_Formula; &#39;Autolaunch: Check MQL&#39;; Moment_Priority; &#39;Retool User - After Save Automations&#39;

External Systems Utilization: None</description>
    <inlineHelpText>The Retool User related to the Moment.</inlineHelpText>
    <label>Retool User</label>
    <referenceTo>Retool_User__c</referenceTo>
    <relationshipLabel>Moments</relationshipLabel>
    <relationshipName>Moments</relationshipName>
    <type>Lookup</type>
</CustomField>