unpackaged/main/default/objects/Moment__c/fields/Retool_UserID__c.field-meta.xml
<CustomField>
    <fullName>Retool_UserID__c</fullName>
    <description>The unique Id of the Retool User related to the Moment.

In Systems Use: Reports

External Systems Utilization: None</description>
    <label>Retool UserID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>