unpackaged/main/default/objects/Moment__c/fields/Rolling_Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>Rolling_Engagement_Score__c</fullName>
    <description>External Systems Utilization: Polytomic</description>
    <label>Rolling Engagement Score</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>