unpackaged/main/default/objects/Moment__c/fields/Source_Category__c.field-meta.xml
<CustomField>
    <fullName>Source_Category__c</fullName>
    <description>Formula that uses the Lead source to display Earned or Paid. Bing, Google, Social, Sponsorship = Paid; Direct, Organic Search or Social, or Partner Referral = Earned

In Systems Use: Reports

External Systems Utilization: None</description>
    <formula>CASE(  Lead_Source_Formula__c ,
&quot;Bing Paid&quot;, &quot;Paid&quot;, 
&quot;Direct&quot;, &quot;Earned&quot;, 
&quot;Google Paid&quot;, &quot;Paid&quot;, 
&quot;Organic Search&quot;, &quot;Earned&quot;, 
&quot;Organic Social&quot;, &quot;Earned&quot;, 
&quot;Paid Social&quot;, &quot;Paid&quot;, 
&quot;Partner Referral&quot;, &quot;Earned&quot;,
&quot;Sponsorship&quot;, &quot;Paid&quot;,
&quot;No Tracking&quot;
)</formula>
    <inlineHelpText>Formula that uses the Lead source to display Earned or Paid. Bing, Google, Social, Sponsorship = Paid; Direct, Organic Search or Social, or Partner Referral = Earned</inlineHelpText>
    <label>Source Category</label>
    <type>Text</type>
</CustomField>