unpackaged/main/default/objects/Moment__c/fields/UTM_Content__c.field-meta.xml
<CustomField>
    <fullName>UTM_Content__c</fullName>
    <label>zOLD UTM Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>