unpackaged/main/default/objects/Moment__c/fields/UTM_Medium__c.field-meta.xml
<CustomField>
    <fullName>UTM_Medium__c</fullName>
    <label>zOLD UTM Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>