unpackaged/main/default/objects/Moment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Lead__c</columns>
    <columns>Email_at_Moment__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>M20240321-741587</value>
    </filters>
    <label>All</label>
</ListView>